Update 'go-jrrdkkky' component image to: quay.io/rhtap_qe/go-jrrdkkky:a9327d280098085fb56f35e3269cd0aac84a7677@sha256:c2afe663e53dffcce29a85a8e43c9af33bc3cf041ce1e39b3e65bde4e81fbc6a

--- a/components/go-jrrdkkky/overlays/development/deployment-patch.yaml
+++ b/components/go-jrrdkkky/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-jrrdkkky
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-jrrdkkky:a9327d280098085fb56f35e3269cd0aac84a7677@sha256:c2afe663e53dffcce29a85a8e43c9af33bc3cf041ce1e39b3e65bde4e81fbc6a
+          name: container-image
